--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-	"test": "mocha \"./{,!(node_modules)/**/}*.test.js\""
+    "start": "node server/server.js",
+	  "test": "mocha \"./{,!(node_modules)/**/}*.test.js\""
+  },
+  "engines" : {
+    "node" : "10.6.0"
   },
   "author": "Stefannel",
   "license": "ISC",
