--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-	  "test": "mocha \"./{,!(node_modules)/**/}*.test.js\""
+    "test": "mocha \"./{,!(node_modules)/**/}*.test.js\""
   },
-  "engines" : {
-    "node" : "10.6.0"
+  "engines": {
+    "node": "10.6.0"
   },
   "author": "Stefannel",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.5"
   },
