--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha \"./{,!(node_modules)/**/}*.test.js\""
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha --timeout 5000 \"./{,!(node_modules)/**/}*.test.js\""
   },
   "engines": {
     "node": "10.6.0"
